<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <!--D A T E -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout_begin_date"
        android:paddingBottom="20dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/begin_date"
            android:id="@+id/tvBeginDate"
            />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/etBeginDate"
            android:drawableRight="@drawable/ic_calendar"
            />
    </LinearLayout>

    <!-- S O R T -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout_sort_order"
        android:layout_below="@id/linear_layout_begin_date"
        android:paddingBottom="20dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/sort_order"
            android:id="@+id/tvSortOrder"/>

        <Spinner
            android:id="@+id/spSortOrder"
            android:spinnerMode="dropdown"
            android:entries="@array/sort"
            android:layout_width="100dp"
            android:layout_height="30dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/spSortOrder"
            android:src="@drawable/ic_sort"/>
    </LinearLayout>

    <!-- NEWS DESK -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout_news_desk_values"
        android:layout_below="@id/linear_layout_sort_order"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/news_desk_values"
            android:id="@+id/tvNewsDeskValues"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox android:id="@+id/cbArts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_arts"
                android:drawableLeft="@drawable/ic_sort_black"

                />

            <CheckBox android:id="@+id/cbFashion_and_Stlye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_fashion_and_style"
                android:drawableLeft="@drawable/ic_sort_black"
                />

            <CheckBox android:id="@+id/cbSports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_sports"
                android:drawableLeft="@drawable/ic_sort_black"
                />
        </LinearLayout>

    </LinearLayout>

    <!-- Buttons -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout_action_buttons"
        android:layout_below="@id/linear_layout_news_desk_values"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_centerInParent="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:id="@+id/btnCancel"
            android:gravity="center"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_done"
            android:id="@+id/btnDone"
            android:gravity="center"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

</RelativeLayout>